# personal-mcp

./: .gitignore  README.md  app.py  pyproject.toml  server.py  test_app.py
